--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "src/main.ts"
     ],
     "compilerOptions": {
-        "noImplicitAny": true,
+    	// "noEmitOnError": true,
+        "noImplicitAny": false,
+        "suppressImplicitAnyIndexErrors": true,
+        "noStrictGenericChecks": true,
         "target": "es5"
     }
 }
